--- a/WebContent/Index.html
+++ b/WebContent/Index.html
@@ -7,14 +7,9 @@
 <body>
 <b>Welcome to IIT Kharagpur Campus Security System</b>
 
-<form action="login">
-Name : <input type="text" name="name"/></br>
-Password : <input type="password" name="password"/></br>
-Login Type :
-<select>
-<option value="manager">Manager</option>
-<option value="employee">Employee</option>
-</select>
+<form action="login" method="post">
+Name : <input type="text" name="name"/>
+Password : <input type="password" name="password"/>
 <input type="submit" value="login"/>
 </form>>
 </body>
