--- a/WebContent/Index.html
+++ b/WebContent/Index.html
@@ -11,6 +11,6 @@
 Name : <input type="text" name="name"/>
 Password : <input type="password" name="password"/>
 <input type="submit" value="login"/>
-</form>>
+</form>
 </body>
 </html>
